Added map links to site recording search, tweaked player controls and added location to player info

--- a/views/default/map.html
+++ b/views/default/map.html
@@ -23,9 +23,10 @@
 	$.each(markers, function(key){
 		var m = markers[key];
 		var marker = L.marker([m.sites.latitude, m.sites.longitude]).addTo(mymap);
-		marker.bindPopup('<b>' + m.sites.site_name +'</b><br>' + m.n_audio + ' recordings');
+		marker.bindPopup('<a href=' + '{{=URL('default','recordings', host=True, scheme=True)}}' +
+			 			 '?keywords=audio.site_id+%3D+"'+ m.sites.id + '"><b>' + m.sites.site_name +
+						 '</b></a><br>' + m.n_audio + ' recordings');
 	});
 
 </script>
-
 {{end page_js}}
