--- a/static/css/main.css
+++ b/static/css/main.css
@@ -53,7 +53,12 @@ li {
   font-size: 18px;
 }
 
-
+.navbar-toggle .icon-bar {
+	background-color: #66a049;
+}
+.navbar-toggle {
+	background-color: rgba(25,65,30,1.0);
+}
 /* Styles for votebars */
 
 .id-qual-div {
