Minor tweaks and integration of taxon table to give custom view and links to it

--- a/views/default/map.html
+++ b/views/default/map.html
@@ -27,6 +27,15 @@
 			 			 '?keywords=audio.site_id+%3D+"'+ m.sites.id + '"><b>' + m.sites.site_name +
 						 '</b></a><br>' + m.n_audio + ' recordings');
 	});
-
+	
+	// var test = new L.Marker([1.5, 115.5], {
+	//     icon: new L.DivIcon({
+	//         className: 'my-div-icon',
+	//         html: '<div class="label label-primary" style="box-shadow: 3px 3px 10px rgba(0,0,0,0.5);"><b style="font-size:12pt;">2</b></div>'
+	//     })
+	// });
+	// test.addTo(mymap).bindPopup('test');
+	
+	
 </script>
 {{end page_js}}
