--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,6 +1,7 @@
 {{extend 'layout.html'}}
 
 <DIV class='container'>
+<center><img src='{{=URL("static","images/logo-rainforest-rhythms.png")}}' alt=" Rainforest Rhythms"></center>
 <H1>Welcome to Rainforest Rhythms</H1>
 
 <p>We are scientists working in some of the world's most threatened rainforest. As part of our research, we collect recordings of the day to day sounds of the rainforest: these soundscapes help us learn about the species that live in the forest and the overall health of the forest.</p>
