Fixed up call player to use full audio temporarily

--- a/views/default/player.html
+++ b/views/default/player.html
@@ -149,6 +149,9 @@
 
             // Load the existing regions from the DB
             loadLockedRegions(regions);
+            
+            // goto the start position
+            wavesurfer.seekAndCenter({{=start}})
     });
 
     // Code to switch the label on the play button
