--- a/views/default/call_player.html
+++ b/views/default/call_player.html
@@ -18,18 +18,40 @@
 	  </div>
 	  
 	  <div class='panel-footer'>
+	      <div class='row'>
+	          <div class='col-sm-12'>
+	          <div class="progress" style='height:10px'>
+	              <div id='loading_bar' class="progress-bar" role="progressbar" style="width:0%">
+	              </div>
+	          </div>
+	          </div>
+	      </div>
 		<div class='row'>
-		<div class="col-sm-10">
-			<small>Call region identifed by {{=record.created_by.first_name + ' ' + record.created_by.last_name}}
-			on {{=record.created_on}}</small>
+		<div class="col-sm-9">
+			Call region identified by {{=record.created_by.first_name + ' ' + record.created_by.last_name}}
+			on {{=record.created_on}}
 		</div>
-		<div class="col-sm-2">
+		<div class="col-sm-3">
 		  <button class="btn btn-primary" onclick="wavesurfer.playPause()" style='padding: 3px 8px' id='play'>
 			<i class="glyphicon glyphicon-play"></i>
-			Play
+			Loop call
 		  </button>
 		</div>
 		
+	  </div>
+	  &nbsp;
+      <div class='row'>
+	  </div>
+      <div class='row'>
+              <div class='col-sm-9'>{{=audio.filename}}, recorded at {{=audio.site_id.site_name}}</div>
+		<div class="col-sm-3">
+			<a href={{=URL('player', vars={'audio_id': audio.id, 'start': record.start_time})}}>
+		  <button class="btn btn-primary" style='padding: 3px 8px' id='play'>
+			<i class="glyphicon glyphicon-play"></i>
+			Go to audio
+		  </button>
+		  </a>
+		</div>
 	  </div>
 	</div>
 	</div>
@@ -83,21 +105,28 @@
 	<!-- Now declare a block of javascript to control the player, which will be inserted
 	into the layout at the page_js markers, in the right place below the main JS loads -->
 	{{block page_js}}
-	<script type="text/javascript">
+<script type="text/javascript">
 	
-	var wavesurfer = WaveSurfer.create({
-		container: '#waveform',
-		scrollParent: true,
-		minimap: true,
-		normalise: false,
-		minPxPerSec: 10,
-		autocenter: false,
-		loop: false,
-		//splitChannels: true
-		// barWidth: 1
-	});
-	
-	
+    /* Load the wavesurfer plugins */
+    var TimelinePlugin = window.WaveSurfer.timeline;
+    var RegionsPlugin = window.WaveSurfer.regions;
+
+    var wavesurfer = WaveSurfer.create({
+            container: '#waveform',
+            scrollParent: true,
+            minimap: true,
+            normalize: true,
+            //minPxPerSec: 10,
+            autocenter: false,
+            barWidth: 1,
+            plugins: [
+                TimelinePlugin.create({
+                        container: '#waveform-timeline'
+                }),
+                RegionsPlugin.create()
+            ]
+    });
+		
 	// Load the requested sample and  its peaks (uses jQuery)
 	//peaks = $.getJSON("{{=URL('static','/audio/SM300545_0+1_20150909_134611_1.json')}}");
 	//peak_json = $.getJSON("{{=URL('static','/audio/test.json')}}");
@@ -105,92 +134,105 @@
 	//wavesurfer.load("{{=URL('static','/audio/SM300545_0+1_20150909_134611_1.mp3')}}", peaks);
 	//wavesurfer.load("{{=URL('static','/audio/SM300545_0+1_20150909_134611_1.mp3')}}", 
 	// [0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9,1.0]);
-	wavesurfer.load("{{=URL('static', 'calls/call_' + str(record.id) + '.mp3')}}");
+	wavesurfer.load("{{=audio_url}}");
+	
+    // Monitor the file loading
+    wavesurfer.on('loading', function (percents, eventTarget) {
+        $('#loading_bar')[0].style.width = percents + '%';
+    });
 	
 	// When the load completes, do the following actions
 	wavesurfer.on('ready', function () {
-		
-		//Initialise the timeline
-		var timeline = Object.create(WaveSurfer.Timeline);
-		
-		timeline.init({
-		  wavesurfer: wavesurfer,
-		  container: '#waveform-timeline',
-			audioRate: 0.5
-		});
-	});
-	
-	// Code to switch the label on the play button 
-	// This will fire with a click on the button or
-	// if the space button is used to pause and play.
-	wavesurfer.on('pause', function () {
-			$('#play')[0].innerHTML = "<i class='glyphicon glyphicon-play'></i> Play";
-	});
-	
-	wavesurfer.on('play', function () {
-			$('#play')[0].innerHTML = "<i class='glyphicon glyphicon-pause'></i> Pause";
-	});
-	
-	// A function to do ajax updating of voting buttons
-	function my_vote(ident_id, score){
-		
-		// open a request to the my_vote controller with 
-		// the id and score attached as variables
-		const xhr = new XMLHttpRequest();
-		var url = '{{=URL('default', 'my_vote', scheme=True, host=True)}}'
-		url = url + '?id=' + ident_id + '&score=' + score
-		xhr.open('GET', url); // by default async 
-		xhr.responseType = 'json'; // in which format you expect the response to be
-		
-		xhr.onload = function() {
-			if(this.status == 200) {// onload called even on 404 etc so check the status
-				// receive back object parsed from the JSON,
-				// with the update average score bar 'width',
-				// and the bar colour 'barcol'
-				// 1) restyle the bar
-				bar = $('#votebar_' + ident_id)[0]
-				bar.style['width'] = this.response.width
-				bar.style['background-color'] = this.response.barcol
-				// 2) update the count
-				count = $('#votecount_' + ident_id)[0]
-				count.innerText = this.response.n_votes
-				// 3) shift the halo
-				var els = document.querySelectorAll('span[id^="vote_option_' + ident_id + '"]');
-				[].forEach.call(els, function (el) {
-					el.className = 'vote'
-				});
-				var halo = document.getElementById("vote_option_" + ident_id + "_" + score);
-				halo.className += ' halo'
-			}
-		};
-		
-		xhr.onerror = function() {
-		  console.log('error')
-		};
-		
-		xhr.send();
-	}
 
-	// Look for submission of a comment and update the discussion by AJAX without reloading 
-	form = $('#discussion_form')
-	form.on('submit', function(event){
+		wavesurfer.seekTo({{=record.start_time/audio.length_seconds}});
 		
-		// prevent the page redirect
-		event.preventDefault();
-		
-		$.ajax({
-			type: 'post',
-			url: form[0].action,
-			data: form.serialize(),
-			success: function(results) {
-				// Swap in the new content
-				$('#discussion')[0].innerHTML = results;
-				// reset the comment box (including renabling the button for some reason)
-				form[0][0].value = '';
-			}
+		wavesurfer.addRegion({
+			start: {{=record.start_time}}, // time in seconds
+			end: {{=record.end_time}}, // time in seconds
+			drag: false,
+			resize: false,
+			loop: true
 		});
-		return false;
 	});
-	
-	</script>
-	{{end page_js}}
+
+
+
+	//
+	// // Code to switch the label on the play button
+	// // This will fire with a click on the button or
+	// // if the space button is used to pause and play.
+	// wavesurfer.on('pause', function () {
+	// 		$('#play')[0].innerHTML = "<i class='glyphicon glyphicon-play'></i> Play";
+	// });
+	//
+	// wavesurfer.on('play', function () {
+	// 		$('#play')[0].innerHTML = "<i class='glyphicon glyphicon-pause'></i> Pause";
+	// });
+	//
+	//
+	//
+	//
+	//
+	// // A function to do ajax updating of voting buttons
+	// function my_vote(ident_id, score){
+	//
+	// 	// open a request to the my_vote controller with
+	// 	// the id and score attached as variables
+	// 	const xhr = new XMLHttpRequest();
+	// 	var url = '{{=URL('default', 'my_vote', scheme=True, host=True)}}'
+	// 	url = url + '?id=' + ident_id + '&score=' + score
+	// 	xhr.open('GET', url); // by default async
+	// 	xhr.responseType = 'json'; // in which format you expect the response to be
+	//
+	// 	xhr.onload = function() {
+	// 		if(this.status == 200) {// onload called even on 404 etc so check the status
+	// 			// receive back object parsed from the JSON,
+	// 			// with the update average score bar 'width',
+	// 			// and the bar colour 'barcol'
+	// 			// 1) restyle the bar
+	// 			bar = $('#votebar_' + ident_id)[0]
+	// 			bar.style['width'] = this.response.width
+	// 			bar.style['background-color'] = this.response.barcol
+	// 			// 2) update the count
+	// 			count = $('#votecount_' + ident_id)[0]
+	// 			count.innerText = this.response.n_votes
+	// 			// 3) shift the halo
+	// 			var els = document.querySelectorAll('span[id^="vote_option_' + ident_id + '"]');
+	// 			[].forEach.call(els, function (el) {
+	// 				el.className = 'vote'
+	// 			});
+	// 			var halo = document.getElementById("vote_option_" + ident_id + "_" + score);
+	// 			halo.className += ' halo'
+	// 		}
+	// 	};
+	//
+	// 	xhr.onerror = function() {
+	// 	  console.log('error')
+	// 	};
+	//
+	// 	xhr.send();
+	// }
+	//
+	// // Look for submission of a comment and update the discussion by AJAX without reloading
+	// form = $('#discussion_form')
+	// form.on('submit', function(event){
+	//
+	// 	// prevent the page redirect
+	// 	event.preventDefault();
+	//
+	// 	$.ajax({
+	// 		type: 'post',
+	// 		url: form[0].action,
+	// 		data: form.serialize(),
+	// 		success: function(results) {
+	// 			// Swap in the new content
+	// 			$('#discussion')[0].innerHTML = results;
+	// 			// reset the comment box (including renabling the button for some reason)
+	// 			form[0][0].value = '';
+	// 		}
+	// 	});
+	// 	return false;
+	// });
+	//
+</script>
+{{end page_js}}
