--- a/views/default/sites.html
+++ b/views/default/sites.html
@@ -1,41 +1,4 @@
 {{extend 'layout.html'}}
-
-
-
-<div class='container'>
-	<h2>Where are our recordings from?</h2>
-	<div id="mapid"></div>
-</div> 
- 
-{{block page_js}}
-
-<script  type="text/javascript">
-
-	var mymap = L.map('mapid').setView([1.5, 113.5], 6);
-
-	var Esri_WorldImagery = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
-		attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
-	}).addTo(mymap);
-
-	// Add the markers from the db
-	var markers = JSON.parse('{{=XML(sitedata)}}')
-	
-	$.each(markers, function(key){
-		var m = markers[key];
-		var marker = L.marker([m.sites.latitude, m.sites.longitude]).addTo(mymap);
-		marker.bindPopup('<a href=' + '{{=URL('default','recordings', host=True, scheme=True)}}' +
-			 			 '?keywords=audio.site_id+%3D+"'+ m.sites.id + '"><b>' + m.sites.site_name +
-						 '</b></a><br>' + m.n_audio + ' recordings');
-	});
-	
-	// var test = new L.Marker([1.5, 115.5], {
-	//     icon: new L.DivIcon({
-	//         className: 'my-div-icon',
-	//         html: '<div class="label label-primary" style="box-shadow: 3px 3px 10px rgba(0,0,0,0.5);"><b style="font-size:12pt;">2</b></div>'
-	//     })
-	// });
-	// test.addTo(mymap).bindPopup('test');
-	
-	
-</script>
-{{end page_js}}
+<DIV class='container'>
+{{=form}}
+</DIV>
