--- a/views/default/index.html
+++ b/views/default/index.html
@@ -1,9 +1,57 @@
 {{extend 'layout.html'}}
 
+<style>
+	.slider {
+	    -webkit-appearance: none;
+	    width: 100%;
+	    height: 15px;
+	    border-radius: 5px;   
+	    background: #d3d3d3;
+	    outline: none;
+	    opacity: 0.7;
+	    -webkit-transition: .2s;
+	    transition: opacity .2s;
+	}
+/*
+	.slider::-webkit-slider-thumb {
+	    -webkit-appearance: none;
+	    appearance: none;
+	    width: 25px;
+	    height: 25px;
+	    border-radius: 50%;
+	    background: #4CAF50;
+	    cursor: pointer;
+	}
 
+	.slider::-moz-range-thumb {
+	    width: 25px;
+	    height: 25px;
+	    border-radius: 50%;
+	    background: #4CAF50;
+	    cursor: pointer;
+	}*/
+</style>
 
 <div class='container'>
-	<h2>Where are our recordings from?</h2>
+	<h2>Welcome to Rainforest Rhythms Radio</h2>
+	<!-- <div class='row'>
+		<div class="col-md-4">
+			<audio id='player' controls autoplay>
+				<source src= type="audio/mpeg">
+			</audio>
+		</div>
+		<div class="col-md-4">
+			  <input type="range" min="0" max="24" value="0" class="slider" id="t_from">
+			  <b id="t_from_label"></b>
+			<div style='height:12px'>
+			</div>
+			  <input type="range" min="0" max="24" value="24" class="slider" id="t_to">
+			  <b id="t_to_label"></b>
+		</div>
+		<div class="col-md-4">
+			Habitats
+		</div>
+	</div> -->
 	<div id="mapid"></div>
 </div> 
  
@@ -11,7 +59,7 @@
 
 <script  type="text/javascript">
 
-	var mymap = L.map('mapid').setView([1.5, 113.5], 6);
+	var mymap = L.map('mapid').setView([4.7, 117.60], 11);
 
 	var Esri_WorldImagery = L.tileLayer('https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}', {
 		attribution: 'Tiles &copy; Esri &mdash; Source: Esri, i-cubed, USDA, USGS, AEX, GeoEye, Getmapping, Aerogrid, IGN, IGP, UPR-EGP, and the GIS User Community'
@@ -25,17 +73,25 @@
 		var marker = L.marker([m.sites.latitude, m.sites.longitude]).addTo(mymap);
 		marker.bindPopup('<a href=' + '{{=URL('default','recordings', host=True, scheme=True)}}' +
 			 			 '?keywords=audio.site_id+%3D+"'+ m.sites.id + '"><b>' + m.sites.site_name +
-						 '</b></a><br>' + m.n_audio + ' recordings');
+						 '</b></a><br>' + m.sites.habitat + '<br>' + m.n_audio + ' recordings');
 	});
-	
-	// var test = new L.Marker([1.5, 115.5], {
-	//     icon: new L.DivIcon({
-	//         className: 'my-div-icon',
-	//         html: '<div class="label label-primary" style="box-shadow: 3px 3px 10px rgba(0,0,0,0.5);"><b style="font-size:12pt;">2</b></div>'
-	//     })
-	// });
-	// test.addTo(mymap).bindPopup('test');
-	
-	
+
+	// var t_from_slider = document.getElementById("t_from");
+	// var t_to_slider = document.getElementById("t_to");
+	// var t_from_label = document.getElementById("t_from_label");
+	// var t_to_label = document.getElementById("t_to_label");
+	//
+	// // Display the default slider value
+	// t_from_label.innerHTML = t_from_slider.value;
+	// t_to_label.innerHTML = t_to_slider.value;
+	//
+	// // Update the sliders value when updated
+	// t_from_slider.oninput = function() {
+	// 	t_from_label.innerHTML = this.value;
+	// }
+	// t_to_slider.oninput = function() {
+	// 	t_to_label.innerHTML = this.value;
+	// }
+
 </script>
 {{end page_js}}
