--- a/views/layout.html
+++ b/views/layout.html
@@ -64,7 +64,8 @@
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
-            {{='auth' in globals() and auth.navbar('Welcome',mode='dropdown') or ''}}
+            <!-- {{='auth' in globals() and auth.navbar('Welcome',mode='dropdown') or ''}} -->
+			{{=login_icon}}
           </ul>
           {{if response.menu:}}
           {{=MENU(response.menu, _class='nav navbar-nav',li_class='dropdown',ul_class='dropdown-menu')}}
