Added recorder type to recorders and through to API filtering, fixed error with deployment scan implementation

--- a/views/default/deployment_matching.html
+++ b/views/default/deployment_matching.html
@@ -7,7 +7,7 @@
 
 <p>To match deployments for unmatched audio files, click here: {{=TAG.button(A('Scan', callback=URL('default','rescan_deployments')))}}</p>
 
-<p>To rematch deployments for all audio files, click here: {{=TAG.button(A('Scan', callback=URL('default','rescan_deployments', args=[1])))}}</p>
+<p>To rematch deployments for all audio files, click here: {{=TAG.button(A('Scan', callback=URL('default','rescan_deployments', args='all')))}}</p>
 
 {{=form}}
 
