Updated views for new functions

--- a/views/default/deployments.html
+++ b/views/default/deployments.html
@@ -1,4 +1,8 @@
 {{extend 'layout.html'}}
 <DIV class='container'>
+
+    <p>This table is used to record the location and dates of deployment of rpi-eco-monitor devices,
+        which is then used to match uploaded files to site data.</p>
+
 {{=form}}
 </DIV>
