Updating the website landing and public pages to acoustics-db role.

--- a/views/default/audio.html
+++ b/views/default/audio.html
@@ -1,9 +1,9 @@
 {{extend 'layout.html'}}
 <DIV class='container'>
 
-<h1>Available recordings</h1>
+<h1>Recording data</h1>
 
-<p> There are a lot of recordings! You can use the simple search tool to look for specific sites and times.</p>
+<p> This is a table of the existing audio recordings catalogued in the database. You can use the simple search tool to look for specific sites and times.</p>
 <ul>
  <li  style='color:white'>Press the <span class='glyphicon glyphicon-play'></span> button to get a quick-loading simple player</li>
  <li style='color:white'> Press the <span class='glyphicon glyphicon-equalizer'></span> button to get a player showing the waveform of the audio through time - this will take longer to load</li>
