--- a/views/layout.html
+++ b/views/layout.html
@@ -60,7 +60,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          {{=response.logo or ''}}
+          <img src='./static/images/logo_acoustics.png' width=70 vspace=5>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav navbar-right">
