Added info to availability

--- a/views/default/availability.html
+++ b/views/default/availability.html
@@ -4,6 +4,16 @@
 <center><img src='{{=URL("static","images/logo_acoustics.png")}}' alt=" SAFE Acoustics Database" width=300></center>
 <H1>Site Audio availability</H1>
 
+<H3>Last scan</H3>
+
+{{=last_scan}}
+
+<H3>Number of recordings</H3>
+
+{{=n_rec}}
+
+<H3>Site Audio availability</H3>
+
 <p>The graph below shows the availability of audio files through time from the set of sampling sites</p>
 
 {{=IMG(_src=URL('static', 'images/availability.png'))}}
