Tweaks and updated readme

--- a/views/default/availability.html
+++ b/views/default/availability.html
@@ -8,11 +8,11 @@
 
 <p>We last scanned for new audio on {{=last_scan.date().isoformat()}} at {{=last_scan.time().isoformat()}} and the audio database currently includes a total of {{=n_rec}} recordings.</p>
 
-<p>The graph below shows the availability of recordings across the different sites and the table records the number of audio files added on each scan. The number of recordings made in a day can vary a lot as the recorders rely on solar power!</p>
+<p>The graph below shows the availability of recordings across the different sites and the table records the number of audio files added on recent scans. The number of recordings made in a day can vary a lot as the recorders rely on solar power!</p>
 
 <h3>Site audio availability</h3>
 {{=IMG(_src=URL('static', 'images/availability.png'))}}
 
 
-<h3>New audio scans</h3>
+<h3>Recent audio scans</h3>
 {{=form}}
